--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7wdiNEUHIyYE46AdFF8u7SraThxGK9DY">
     </script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <input placeholder="Search…" type="search" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off">
   </head>
   <body>
