Rearrange html to put map on the right side and the list and search bar on the left

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style type="text/css">
+   <!-- <style type="text/css">
       html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
-    </style>
+    </style>-->
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7wdiNEUHIyYE46AdFF8u7SraThxGK9DY">
     </script>
-    <input placeholder="Search…" type="search" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off">
   </head>
   <body>
-  <div id="map-canvas"></div>
-    <script src="bower_components/jquery/jquery.js"></script>
-    <script src="js/views/map-view.js"></script>
-    <script src="js/models/model.js"></script>
-    <!--<script src="js/app.js"></script>  -->
+  <div id="map-canvas" style="float:left; width 60%; height100%"></div>
+  <div id="map_side" style="float:left; width 40%; height80%"></div>
+  <div id="search_side" style="float:left; width 40%; height20%">
+    <input placeholder="Search…" type="search" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off">
+  </div>
+  <script src="bower_components/jquery/jquery.js"></script>
+  <script src="js/views/map-view.js"></script>
+  <script src="js/models/model.js"></script>
+  <!--<script src="js/app.js"></script>  -->
   </body>
 </html>
