--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
   <script src="bower_components/jquery/jquery.js"></script>
   <script src="js/views/map-view.js"></script>
-  <script src="js/models/model.js"></script>
-  <!--<script src="js/app.js"></script>  -->
+  <!--<script src="js/models/model.js"></script>
+  <script src="js/app.js"></script>  -->
   </body>
 </html>
